# GameX

./: .gitmodules
docs/Families/Rockstar/: Readme.md
dotnet/: CMakeLists.txt  CMakePresets.json  GameX.Directory.sln  GameX.sln
dotnet/Applications/GameX.App.Cli/: GameX.App.Cli.csproj  Program+List.cs
dotnet/Applications/GameX.App.CliTests/: GameX.App.CliTests.csproj
dotnet/Applications/GameX.App.Explorer/: App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GameX.App.Explorer.csproj
dotnet/Applications/GameX.App.ExplorerM/: App+Permissions.cs  App.xaml.cs  AppShell.xaml  GameX.App.ExplorerM.csproj  MauiProgram.cs
dotnet/Applications/GameX.App.ExplorerVR/: App+Permissions.cs  App.xaml.cs  GameX.App.ExplorerVR.csproj  MauiProgram.cs
dotnet/Bethesda/GameX.Bethesda.Native/: CMakeLists.txt  GameX.Bethesda.Native.cpp  GameX.Bethesda.Native.h
python/: README.md  setup.cfg  test_Bullfrog.py
python/app/: ExplorerApp.py  gl1.py
python/gamex/: GameX.py  GameX_Arkane.py  GameX_Bethesda.py  GameX_Bioware.py  GameX_Black.py  GameX_Blizzard.py  GameX_Bullfrog.py  GameX_Capcom.py  GameX_Cig.py  GameX_Cryptic.py  GameX_Crytek.py  GameX_Cyanide.py  GameX_EA.py  GameX_Epic.py  GameX_Frictional.py  GameX_Frontier.py  GameX_IW.py  GameX_Id.py  GameX_Lucas.py  GameX_Monolith.py  GameX_Origin.py  GameX_Red.py  GameX_Ubisoft.py  GameX_Unity.py  GameX_Valve.py  GameX_Volition.py  GameX_WB.py  __init__.py  _config.py  compression.py  family.py  file.py  filesrc.py  meta.py  pak.py  platform.py  platform_opengl.py  platform_system.py  store.py  store_steam.py  (+2 more)
(+866 files in other folders)
